trunk/Archive2/36/b3d6a7fab40d73/output
g++ (GCC) 4.8.2
Copyright (C) 2013 Free Software Foundation, Inc.
This is free software; see the source for copying conditions.  There is NO
warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.

+ g++-4.8 -std=c++11 -Wall -Wextra -Wconversion -pedantic -O0 -pedantic -pthread main.cpp
main.cpp: In function 'int main()':
main.cpp:9:24: error: cannot declare catch parameter to be of rvalue reference type 'std::string&& {aka std::basic_string<char>&&}'
     } catch (string && s) {
                        ^
main.cpp:10:17: error: 's' was not declared in this scope
         cout << s << endl;
                 ^
