trunk/Archive2/36/b3d6a7fab40d73/main.cpp
#include <string>
#include <iostream>

using namespace std;

int main(){
    try {
        throw string("test");
    } catch (string && s) {
        cout << s << endl;
    }
    return 0;
}